--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <nav>
         <div class="nav-container">
           <div class="logo">
-            <img src="logo.png" alt="Logo" />
+            <img src="images/logo.png" alt="Logo" />
           </div>
     
           <div class="hamburger" onclick="toggleMenu()">
