--- a/auth.html
+++ b/auth.html
@@ -11,26 +11,35 @@
         <h2>Welcome Back</h2>
         <p>Login to your account</p>
 
-        <form>
+        <form id="authForm">
+
             <div class="input-group">
                 <label>Email</label>
-                <input type="email" placeholder="Enter your email" required>
+                <input type="email" name="email" placeholder="Enter your email" required>
             </div>
 
             <div class="input-group">
                 <label>Password</label>
-                <input type="password" placeholder="Enter your password" required>
+                <input type="password" name="password" placeholder="Enter your password" required>
             </div>
+
+            <!-- Message Area -->
+            <div class="message" id="loginMessage"></div>
 
             <button type="submit">Login</button>
 
             <div class="extra-links">
                 <a href="#">Forgot Password?</a>
-                <p>Don't have an account? <a href="#">Sign Up</a></p>
+                <p>Don't have an account? 
+                    <a href="signup.html">Sign Up</a>
+                </p>
             </div>
+
         </form>
     </div>
 </div>
+
+<script src="auth.js"></script>
 
 </body>
 </html>
