--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <a href="#">Home</a>
             <a href="#">About</a>
             <a href="#">Projects</a>
-            <a href="#">Contact</a>
+            <a href="#">Contacts</a>
           </div>
         </div>
       </nav>
